--- a/css/main.css
+++ b/css/main.css
@@ -16,13 +16,28 @@ body {
     /* disposizione su colonne */
     flex-direction: column;
 }
+/* button */
+.but {
+    background-color: rgba(255, 255, 255, 0.3);
+    color: white;
+    padding: 4px;
+    border-radius: 6px;
+    border: none;
+}
+/* margin */
+.margin-r{
+    margin-right: 2px;
+}
 
 /* HEADER CONTAIN */
 header {
     height: 40px;
-    background-color: blanchedalmond;
+   /*  background-color: /* blanchedalmond; */ 
     text-align: right;
+    padding: 10px;
 }
+
+
 
 
 /* MAIN CONTAIN */
