--- a/css/main.css
+++ b/css/main.css
@@ -63,6 +63,13 @@ main {
     background-color: rgb(197, 85, 65);
 
 }
+/* insert img */
+ .block img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    
+}
 
 /* FOOTER SECTION */
 footer {
