--- a/css/main.css
+++ b/css/main.css
@@ -87,26 +87,37 @@ main {
 /* FOOTER SECTION */
 footer {
    /*  height: 40px; */
-    background-color: tomato;
+    background-color: rgb(117, 117, 117);
     display: flex;
     justify-content: space-between;
 }
 
-  .section-a {
+  .section-a, .section-b {
       display: flex;
    text-align: center;
    list-style: none;
    padding: 10px;
 }
 .margin {
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-left: 15px;
+    margin-right: 15px;
+    
 }
 
 .section-a .icon {
     font-size: 20px;
     margin-bottom: 5px;
 }
+.arrow-menu {
+    display: flex;
+    align-items: baseline;
+}
+.arrow {
+    margin-left: 10px;
+}
+
+
+
 
 
 
